# LGen

./: .gitmodules  CMakeLists.txt  LGen.sln  LGen.vcxproj  README.md
glsl/: fragmentGeometry.glsl  uniforms.glsl  vertexGeometry.glsl
include/: lgen.h
src/: main.cpp
src/console/: command.cpp  command.h  commandList.cpp  commandList.h  console.cpp  (+5 more)
text/: help.txt  helpEnvironmentDelete.txt  helpEnvironmentInitialize.txt  helpEnvironmentLoad.txt  helpEnvironmentNew.txt  helpEnvironmentRender.txt  helpEnvironmentSave.txt  helpEnvironmentTerrainDropwave.txt  helpEnvironmentTerrainFlat.txt  helpEnvironmentTerrainValleys.txt  helpExit.txt  helpInspect.txt  helpRenderDefault.txt  helpRenderWireframe.txt  helpSimulationAdvance.txt  helpSimulationAdvanceN.txt  helpSimulationAdvanceS.txt  helpSimulationDelete.txt  helpSimulationDensity.txt  helpSimulationInitialize.txt  helpSimulationLoad.txt  helpSimulationMutatorPBranchAdd.txt  helpSimulationMutatorPBranchRemove.txt  helpSimulationMutatorPLeafAdd.txt  helpSimulationMutatorPLeafRemove.txt  helpSimulationMutatorPRuleAdd.txt  helpSimulationMutatorPRuleDuplicate.txt  helpSimulationMutatorPRuleRemove.txt  helpSimulationMutatorPSymbolAdd.txt  helpSimulationMutatorPSymbolChanceConstant.txt  helpSimulationMutatorPSymbolChanceNew.txt  helpSimulationMutatorPSymbolChanceRotation.txt  helpSimulationMutatorPSymbolChanceSeed.txt  helpSimulationMutatorPSymbolChanceStep.txt  helpSimulationMutatorPSymbolRemove.txt  helpSimulationNew.txt  helpSimulationRender.txt  helpSimulationReseed.txt  helpSimulationRevert.txt  helpSimulationSave.txt  (+16 more)
(+209 files in other folders)
